--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -7,7 +7,7 @@
         <p>
             <span style="font-size: 1.5em;">{{ user.display_name }}<br>
                 <a class="no-underline" href="{{ url_for('profile', username = user.username) }}">(@{{ user.username }})</a></span><br>
-            <span class="small-text">tagline here</span>
+            <span class="small-text">{{ user.tagline }}</span>
         </p>
     </div>
 {% endblock %}
@@ -22,13 +22,20 @@
                         <g><path d="M8.773,0h105.332c2.417,0,4.611,0.986,6.199,2.574c1.589,1.588,2.574,3.783,2.574,6.199v105.333 c0,2.416-0.985,4.61-2.574,6.199c-1.588,1.588-3.782,2.574-6.199,2.574H8.773c-2.416,0-4.611-0.986-6.199-2.574 C0.986,118.717,0,116.522,0,114.106V8.773c0-2.417,0.986-4.611,2.574-6.199S6.357,0,8.773,0L8.773,0z M57.876,30.852 c0-1.968,1.596-3.564,3.563-3.564c1.969,0,3.563,1.596,3.563,3.564v27.024l27.024,0c1.969,0,3.563,1.596,3.563,3.563 s-1.595,3.563-3.563,3.563H65.003v27.024c0,1.969-1.596,3.563-3.563,3.563s-3.563-1.595-3.563-3.563V65.003H30.852 c-1.968,0-3.563-1.595-3.563-3.563c0-1.968,1.596-3.563,3.563-3.563h27.024V30.852L57.876,30.852z M114.105,7.129H8.773 c-0.449,0-0.859,0.186-1.159,0.485c-0.3,0.3-0.486,0.71-0.486,1.159v105.333c0,0.448,0.186,0.859,0.486,1.159 c0.3,0.299,0.71,0.485,1.159,0.485h105.332c0.449,0,0.86-0.187,1.159-0.485c0.3-0.3,0.486-0.711,0.486-1.159V8.773 c0-0.449-0.187-0.859-0.486-1.159C114.966,7.315,114.555,7.129,114.105,7.129L114.105,7.129z"/></g></svg>
                 </div>
             </a>
-            <div style="display:flex; float:right;">
-                <svg class="profile-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 121.51">
-                    <title>Edit profile</title>
-                    <path d="M28.66,1.64H58.88L44.46,16.71H28.66a13.52,13.52,0,0,0-9.59,4l0,0a13.52,13.52,0,0,0-4,9.59v76.14H91.21a13.5,13.5,0,0,0,9.59-4l0,0a13.5,13.5,0,0,0,4-9.59V77.3l15.07-15.74V92.85a28.6,28.6,0,0,1-8.41,20.22l0,.05a28.58,28.58,0,0,1-20.2,8.39H11.5a11.47,11.47,0,0,1-8.1-3.37l0,0A11.52,11.52,0,0,1,0,110V30.3A28.58,28.58,0,0,1,8.41,10.09L8.46,10a28.58,28.58,0,0,1,20.2-8.4ZM73,76.47l-29.42,6,4.25-31.31L73,76.47ZM57.13,41.68,96.3.91A2.74,2.74,0,0,1,99.69.38l22.48,21.76a2.39,2.39,0,0,1-.19,3.57L82.28,67,57.13,41.68Z"/></svg>
-            </div>
+            <a href="{{ url_for('edit_prof') }}">
+                <div style="display:flex; float:right;">
+                    <svg class="profile-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 121.51">
+                        <title>Edit profile</title>
+                        <path d="M28.66,1.64H58.88L44.46,16.71H28.66a13.52,13.52,0,0,0-9.59,4l0,0a13.52,13.52,0,0,0-4,9.59v76.14H91.21a13.5,13.5,0,0,0,9.59-4l0,0a13.5,13.5,0,0,0,4-9.59V77.3l15.07-15.74V92.85a28.6,28.6,0,0,1-8.41,20.22l0,.05a28.58,28.58,0,0,1-20.2,8.39H11.5a11.47,11.47,0,0,1-8.1-3.37l0,0A11.52,11.52,0,0,1,0,110V30.3A28.58,28.58,0,0,1,8.41,10.09L8.46,10a28.58,28.58,0,0,1,20.2-8.4ZM73,76.47l-29.42,6,4.25-31.31L73,76.47ZM57.13,41.68,96.3.91A2.74,2.74,0,0,1,99.69.38l22.48,21.76a2.39,2.39,0,0,1-.19,3.57L82.28,67,57.13,41.68Z"/></svg>
+                </div>
+            </a>
         {% endif %}
         stalkers, stalking, start stalking
+    </div>
+
+    <!-- Profile description -->
+    <div>
+        desc here
     </div>
 
     {% for post in posts %}
