--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% from "macros.html" import user_post with context %}
 
+<!-- Profile header -->
 {% block content_header %}
     <div class="prof-header">
         <img class="user-av" src="{{ user.avatar_url }}">
@@ -12,6 +13,7 @@
     </div>
 {% endblock %}
 
+<!-- Profile info bar and tools -->
 {% block content %}
     <div style="padding:1em;">
         {% if user == current_user %}
@@ -22,7 +24,7 @@
                         <g><path d="M8.773,0h105.332c2.417,0,4.611,0.986,6.199,2.574c1.589,1.588,2.574,3.783,2.574,6.199v105.333 c0,2.416-0.985,4.61-2.574,6.199c-1.588,1.588-3.782,2.574-6.199,2.574H8.773c-2.416,0-4.611-0.986-6.199-2.574 C0.986,118.717,0,116.522,0,114.106V8.773c0-2.417,0.986-4.611,2.574-6.199S6.357,0,8.773,0L8.773,0z M57.876,30.852 c0-1.968,1.596-3.564,3.563-3.564c1.969,0,3.563,1.596,3.563,3.564v27.024l27.024,0c1.969,0,3.563,1.596,3.563,3.563 s-1.595,3.563-3.563,3.563H65.003v27.024c0,1.969-1.596,3.563-3.563,3.563s-3.563-1.595-3.563-3.563V65.003H30.852 c-1.968,0-3.563-1.595-3.563-3.563c0-1.968,1.596-3.563,3.563-3.563h27.024V30.852L57.876,30.852z M114.105,7.129H8.773 c-0.449,0-0.859,0.186-1.159,0.485c-0.3,0.3-0.486,0.71-0.486,1.159v105.333c0,0.448,0.186,0.859,0.486,1.159 c0.3,0.299,0.71,0.485,1.159,0.485h105.332c0.449,0,0.86-0.187,1.159-0.485c0.3-0.3,0.486-0.711,0.486-1.159V8.773 c0-0.449-0.187-0.859-0.486-1.159C114.966,7.315,114.555,7.129,114.105,7.129L114.105,7.129z"/></g></svg>
                 </div>
             </a>
-            <a href="{{ url_for('edit_prof') }}">
+            <a href="{{ url_for('edit_prof', category = category) }}">
                 <div style="display:flex; float:right;">
                     <svg class="profile-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 121.51">
                         <title>Edit profile</title>
@@ -34,10 +36,9 @@
     </div>
 
     <!-- Profile description -->
-    <div>
-        desc here
-    </div>
+    <div>{{ desc }}</div>
 
+    <!-- User posts -->
     {% for post in posts %}
         <p>{{ user_post(post) }}</p>
     {% endfor %}
