--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -17,8 +17,8 @@
             {{ form.content }}<br>
 
             <span class="small-text">{{ form.category.label }}</span><br>
-            {{ form.category(placeholder=form.category.description) }}
-            {{ form.new_cat(maxlength=32, placeholder=form.new_cat.description) }}<br>
+            {{ form.category }}
+            {{ form.new_cat(maxlength=32, value=current_cat, placeholder=form.new_cat.description) }}<br>
 
             {{ form.submit }}
         </form></p>
