--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -17,7 +17,7 @@
 {% block content %}
     <div style="padding:1em;">
         {% if user == current_user %}
-            <a href="{{ url_for('post') }}">
+            <a href="{{ url_for('post', category = category) }}">
                 <div style="display:flex; float:right;">
                     <svg class="profile-button" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="122.879px" height="122.88px" viewBox="0 0 122.879 122.88" enable-background="new 0 0 122.879 122.88" xml:space="preserve">
                         <title>Create new post</title>
