--- a/app/static/default.css
+++ b/app/static/default.css
@@ -325,13 +325,9 @@ input[type='submit'] {
     border: 0.2em solid var(--color-header-gray);
 }
 
-.post div {
-    padding: 1em;
-}
-
 .post-title-container {
     background-color: var(--color-header);
-
+    padding: 1em;
 }
 
 .post-title {
@@ -341,16 +337,28 @@ input[type='submit'] {
 
 .post-content {
     background-color: seagreen;
+    padding: 1em;
 }
 
 .post-desc {
     background-color: var(--color-header-gray);
     display: flex;
     overflow-wrap: anywhere;
+    padding: 1em;
+}
+
+.post-user-container {
+    text-align: center;
+    width: 5em;
+}
+
+.post-desc-container {
+    padding-left: 1em;
 }
 
 .post-footer {
     background-color: var(--color-header);
+    padding: 1em;
 }
 
 .post-options-menu {
