--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -8,11 +8,11 @@
 {% block content %}
     {{ flashes() }}
     {% if res %}
-        <table class="search-results">
+        <table class="list-results">
             {% for r in res %}
                 <tr>
                     <td class="user-av-med">
-                        {{ user_avatar_linked(r) }}</a>
+                        {{ user_avatar_linked(r) }}
                     </td>
                     <td>
                         <a href="{{ url_for('profile', username = r.username) }}" class="no-underline">
