--- a/app/templates/stalklist.html
+++ b/app/templates/stalklist.html
@@ -4,12 +4,12 @@
 {% block content %}
     <table class="list-results">
         {% if stalkers %}
-            <th>{{ table_header }}</th>
+            <th colspan="2">{{ table_header }} ({{ stalkers.count() }})</th>
             {% for stalker in stalkers %}
                 <tr>
                     <td class="user-av-med">{{ user_avatar_linked(stalker) }}</td>
                     <td>
-                        <a href="{{ url_for('profile', username = stalker.username) }}" class="no-underline">
+                        <a href="{{ url_for('profile', username = stalker.username) }}">
                             <div>
                                 <span class="default-text">{{ stalker.display_name }}</span><br>
                                 <span class="small-text">@{{ stalker.username }}</span>
