--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -10,7 +10,7 @@
                 {% if current_user.is_stalking(user) %}
                     {{ stalkback_logo() }}
                 {% endif %}<br>
-            <a class="no-underline" href="{{ url_for('profile', username = user.username) }}">(@{{ user.username }})</a></span><br>
+            <a href="{{ url_for('profile', username = user.username) }}">(@{{ user.username }})</a></span><br>
             <span class="small-text">{{ user.tagline }}</span>
         </p>
     </div>
