--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -15,7 +15,7 @@
                         {{ user_avatar_linked(r) }}
                     </td>
                     <td>
-                        <a href="{{ url_for('profile', username = r.username) }}" class="no-underline">
+                        <a href="{{ url_for('profile', username = r.username) }}">
                             <div>
                                 <span class="default-text">{{ r.display_name }}</span><br>
                                 <span class="small-text">@{{ r.username }}</span>
