--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -19,7 +19,8 @@
                             <div>
                                 <span class="default-text">{{ r.display_name }}</span><br>
                                 <span class="small-text">@{{ r.username }}</span>
-                            </div></a>
+                            </div>
+                        </a>
                     </td>
                 </tr>
             {% endfor %}
