Added like and unlike functionality

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% from "macros.html" import search_bar, user_avatar_linked, user_post %}
+{% from "macros.html" import search_bar, user_avatar_linked, user_post with context%}
 
 <!-- SEARCH BAR -->
 {% block content_header %}
