Added page to view all of your liked posts

--- a/app/static/default.css
+++ b/app/static/default.css
@@ -411,6 +411,7 @@ input[type='submit'] {
     float: right;
     height: 2em;
     width: 2em;
+    cursor: pointer;
 }
 
 .text-area-form textarea {
