--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -104,7 +104,6 @@
                     {{ del_form.del_post }}
                 </form>
             {% endif %}
-            (>) comment
 
             <form method="POST">
                 {{ button_like.csrf_token() }}
@@ -120,6 +119,7 @@
                     {% endif %}
                 </button>
             </form>
+            COMMENT
             <br>
         </div>
     </div>
