--- a/app/templates/liked_posts.html
+++ b/app/templates/liked_posts.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% from "macros.html" import user_post with context %}
+{% from "macros.html" import user_submission with context %}
 {% block content %}
     {% for post in current_user.liked_posts %}
-        <p>{{ user_post(post) }}</p>
+        <p>{{ user_submission(post) }}</p>
     {% endfor %}
 {% endblock %}
