--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -55,7 +55,7 @@
     </div>
 {%- endmacro %}
 
-{% macro user_post(p) -%}
+{% macro user_submission(p) -%}
     <div class="post">
         <div class="post-title-container">
             <table><tr>
