--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -107,7 +107,7 @@
 
             <form method="POST">
                 {{ button_like.csrf_token() }}
-                {{ button_like.like_id(value=p.id) }}
+                {{ button_like.post_id(value=p.id) }}
 
                 <button class="like-button" onclick="return toggleLike(this)">
                     {% if not p.is_liked_by(current_user) %}
