--- a/app/static/default.css
+++ b/app/static/default.css
@@ -277,10 +277,6 @@ input[type='submit'] {
     border-color: var(--color-warning);
 }
 
-.button-del-post {
-    float: right;
-}
-
 .search-container {
     display: inline;
     width: 100%;
@@ -423,12 +419,18 @@ input[type='submit'] {
     float: right;
     min-width: 30vw;
     border: 0.2em solid var(--color-highlight);
+    box-sizing: border-box;
 }
 
 .post-options-menu-item {
     background-color: var(--color-header-gray);
     padding: 0.5em;
     text-align: center;
+    width: 100%;
+    font-size: 1em;
+    color: var(--color-text);
+    border-color: var(--color-header-gray);
+    cursor: pointer;
 }
 
 .text-area-form textarea {
