--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -19,6 +19,11 @@
             </td>
         </table>
     </div>
+    <div class="dashboard-quick-links">
+        <a href="{{ url_for('liked_posts') }}">Liked posts</a><br>
+        <a href="{{ url_for('stalklist', username = current_user.username, category = 'none', rel = 'stalking') }}">Who am I stalking?</a><br>
+        <a href="{{ url_for('stalklist', username = current_user.username, category = 'none', rel = 'stalkers') }}">My stalkers</a><br>
+    </div>
 
     {% for post in current_user.stalked_submissions() %}
         <p>{{ user_submission(post) }}</p>
