--- a/app/static/default.css
+++ b/app/static/default.css
@@ -460,9 +460,24 @@ input[type='submit'] {
     fill: var(--color-highlight);
 }
 
+.input-button-standard {
+    padding: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.input-button-mid-color {
+    background-color: var(--color-bg);
+    border: 0.1em ridge var(--color-header-gray);
+    color: var(--color-text);
+}
+
 .stalk-button input[type='submit'] {
     background-color: var(--color-header);
     border-color: var(--color-highlight);
+    border-radius: 5px;
     color: var(--color-text);
     padding: 1em;
     padding-top: 0.5em;
@@ -476,6 +491,10 @@ input[type='submit'] {
     padding: 1em;
 }
 
+.comments-container {
+    display: none;
+}
+
 .reply-container {
     margin-top: 1em;
     margin-bottom: 1em;
@@ -486,4 +505,14 @@ input[type='submit'] {
     padding: 0.5em;
     width: 100%;
     box-sizing: border-box;
+}
+
+.reply-container textarea:focus {
+    outline: none !important;
+    border: 0.2em solid var(--color-highlight);
+}
+
+.reply-tools-container {
+    width: 100%;
+    height: 2em;
 }
