--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -114,7 +114,7 @@
                 {{ post_int.csrf_token() }}
                 {{ post_int.post_id(value=p.id) }}
 
-                <div class="svg-icon clickable comment-icon">
+                <div class="svg-icon clickable comment-icon" onclick="toggleElDisplay('comments-container', this)">
                     {{ comment_icon() }}
                 </div>
                 <button class="like-button" onclick="return toggleLike(this)">
@@ -122,15 +122,18 @@
                         <div class="svg-icon clickable like-icon" title="Like">{{ unliked_icon() }}</div>
                         <div class="svg-icon clickable like-icon liked-icon" title="Unlike" style="display:none;">{{ liked_icon() }}</div>
                     {% else %}
-                        <div class="svg-icon clickable like-icon" title="Like" style="display:none;"{{ unliked_icon() }}</div>
+                        <div class="svg-icon clickable like-icon" title="Like" style="display:none;">{{ unliked_icon() }}</div>
                         <div class="svg-icon clickable like-icon liked-icon" title="UnLike">{{ liked_icon() }}</div>
                     {% endif %}
                 </button>
                 <span class="like-count">{{ p.liked_by | length }}</span> like{% if p.liked_by | length != 1 %}s{%endif%}
-                <br>
-                <div class="reply-container">
-                    {{ post_int.comment(placeholder=post_int.comment.description) }}
-                    <button onclick="return replyToPost(this)">submit</button>
+                <div class="comments-container">
+                    <div class="reply-container">
+                        {{ post_int.comment(rows="5", placeholder=post_int.comment.description) }}
+                        <div class="reply-tools-container">
+                            <button class="input-button-standard input-button-mid-color" onclick="return replyToPost(this)" style="margin:0.5em; float:right;">submit</button>
+                        </div>
+                    </div>
                 </div>
             </form>
         </div>
