--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -92,7 +92,9 @@
                 </div>
             </div>
         {% endif %}
+
         <div class="post-footer">
+            <!-- POST OPTIONS MENU -->
             {% if p.author == current_user %}
                 <td><svg class="post-options-button" onclick="toggleColor(this, 'var(--color-text)', 'var(--color-highlight)'); toggleElDisplay('post-options-menu', this)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.96 122.88">
                         <title>Options</title>
@@ -114,9 +116,12 @@
                 {{ post_int.csrf_token() }}
                 {{ post_int.post_id(value=p.id) }}
 
+                <!-- COMMENT BUTTON -->
                 <div class="svg-icon clickable comment-icon" onclick="toggleElDisplay('comments-container', this)">
                     {{ comment_icon() }}
                 </div>
+
+                <!-- LIKE BUTTON -->
                 <button class="like-button" onclick="return toggleLike(this)">
                     {% if not p.is_liked_by(current_user) %}
                         <div class="svg-icon clickable like-icon" title="Like">{{ unliked_icon() }}</div>
@@ -127,6 +132,8 @@
                     {% endif %}
                 </button>
                 <span class="like-count">{{ p.liked_by | length }}</span> like{% if p.liked_by | length != 1 %}s{%endif%}
+                
+                <!-- COMMENTS -->
                 <div class="comments-container">
                     <div class="reply-container">
                         {{ post_int.comment(rows="5", placeholder=post_int.comment.description) }}
