--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -111,52 +111,17 @@
                         </form>
                     </div>
             {% endif %}
-
-            <form method="POST">
-                {{ post_int.csrf_token() }}
-                {{ post_int.post_id(value=p.id) }}
-
-                <!-- COMMENT BUTTON -->
-                <div class="svg-icon clickable comment-icon" onclick="toggleElDisplay('comments-container', this)">
-                    {{ comment_icon() }}
-                </div>
-
-                <!-- LIKE BUTTON -->
-                <button class="like-button" onclick="return toggleLike(this)">
-                    {% if not p.is_liked_by(current_user) %}
-                        <div class="svg-icon clickable like-icon" title="Like">{{ unliked_icon() }}</div>
-                        <div class="svg-icon clickable like-icon liked-icon" title="Unlike" style="display:none;">{{ liked_icon() }}</div>
-                    {% else %}
-                        <div class="svg-icon clickable like-icon" title="Like" style="display:none;">{{ unliked_icon() }}</div>
-                        <div class="svg-icon clickable like-icon liked-icon" title="UnLike">{{ liked_icon() }}</div>
-                    {% endif %}
-                </button>
-                <span class="like-count">{{ p.liked_by | length }}</span> like{% if p.liked_by | length != 1 %}s{%endif%}
-                
-                <!-- COMMENTS -->
-                <div class="comments-container">
-                    <div class="reply-container">
-                        {{ post_int.comment(rows="5", placeholder=post_int.comment.description) }}
-                        <div class="reply-tools-container">
-                            <button class="input-button-standard input-button-mid-color" onclick="return replyToPost(this)" style="margin:0.5em; float:right;">submit</button>
-                        </div>
-                    </div>
-                    {% for r in p.replies %}
-                        {{ user_comment(r) }}
-                    {% endfor %}
-                </div>
-
-            </form>
+            {{ post_int_tools(p, p) }}
         </div>
     </div>
 {%- endmacro %}
 
-{% macro user_comment(c) -%}
+{% macro user_comment(c, submission) -%}
     <div class="post comment" style="margin-bottom:1em;">
         <div class="post-desc">
             <div class="post-user-container">
                 {{ user_avatar_linked(c.author) }}<br>
-                {% if c.author != c.parent.author %}
+                {% if c.author != submission.author %}
                     <span class="not-op">{{ user_dname_linked(c.author) }}</span>
                 {% else %}
                     <span>{{ user_dname_linked(c.author) }}</span>
@@ -166,8 +131,50 @@
                 {{ c.desc }}
             </div>
         </div>
-        <div class="post-footer">test</div>
+
+        <!-- COMMENT FOOTER TOOLS -->
+        <div class="post-footer">
+            {{ post_int_tools(c, submission) }}
+        </div>
     </div>
+{%- endmacro %}
+
+{% macro post_int_tools(p, submission) %}
+    <form method="POST">
+        {{ post_int.csrf_token() }}
+        {{ post_int.post_id(value=p.id) }}
+
+        <!-- COMMENT BUTTON -->
+        <div class="svg-icon clickable comment-icon" onclick="toggleElDisplay('comments-container', this)">
+            {{ comment_icon() }}
+        </div>
+
+        <!-- LIKE BUTTON -->
+        <button class="like-button" onclick="return toggleLike(this)">
+            {% if not p.is_liked_by(current_user) %}
+                <div class="svg-icon clickable like-icon" title="Like">{{ unliked_icon() }}</div>
+                <div class="svg-icon clickable like-icon liked-icon" title="Unlike" style="display:none;">{{ liked_icon() }}</div>
+            {% else %}
+                <div class="svg-icon clickable like-icon" title="Like" style="display:none;">{{ unliked_icon() }}</div>
+                <div class="svg-icon clickable like-icon liked-icon" title="UnLike">{{ liked_icon() }}</div>
+            {% endif %}
+        </button>
+        <span class="like-count">{{ p.liked_by | length }}</span> like{% if p.liked_by | length != 1 %}s{%endif%}
+        
+        <!-- COMMENTS -->
+        <div class="comments-container">
+            <div class="reply-container">
+                {{ post_int.comment(rows="5", placeholder=post_int.comment.description) }}
+                <div class="reply-tools-container">
+                    <button class="input-button-standard input-button-mid-color" onclick="return replyToPost(this)" style="margin:0.5em; float:right;">submit</button>
+                </div>
+            </div>
+
+            {% for r in p.replies %}
+                {{ user_comment(r, submission) }}
+            {% endfor %}
+        </div>
+    </form>
 {%- endmacro %}
 
 {% macro user_avatar_linked(user) -%}
