--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <div style="background-color: var(--color-header);">
+    <div class="dashboard-header">
         <table>
             <td class="user-av-med" style="padding: 0.5em">
                 {{ user_avatar_linked(current_user) }}
